Fix tests and fix scrollbar on mob

--- a/src/app/common/layout/sidebar/navigation-v2/navigation-v2.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation-v2/navigation-v2.component.ng.scss
@@ -41,9 +41,7 @@
       overflow-x: hidden;
       max-height: calc(100vh - 75px);
 
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      @include hide-scrollbar;
 
       @media screen and (max-width: $max-mobile) {
         max-height: 100vh;
